# docs/swagger.json
@@ -393,6 +393,59 @@
                 }
             }
         },
+        "/menu/getMenuAuthority": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单相关接口"
+                ],
+                "summary": "根据角色获取菜单树",
+                "parameters": [
+                    {
+                        "description": "角色id",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetAuthorityId"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "菜单树信息",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.MenuTree"
+                                        },
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/menu/getMenuList": {
             "post": {
                 "security": [
@@ -752,11 +805,23 @@
                 "UpdatedAt": {
                     "type": "string"
                 },
+                "authoritys": {
+                    "description": "关联角色",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Role"
+                    }
+                },
                 "children": {
+                    "description": "子菜单",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Menu"
                     }
+                },
+                "closeTab": {
+                    "description": "开发中",
+                    "type": "boolean"
                 },
                 "component": {
                     "description": "前端文件路径",
@@ -770,11 +835,25 @@
                     "description": "图标",
                     "type": "string"
                 },
+                "keepAlive": {
+                    "description": "开发中",
+                    "type": "boolean"
+                },
+                "menuBtn": {
+                    "description": "开发中",
+                    "type": "array",
+                    "items": {}
+                },
                 "name": {
                     "description": "路由名称",
                     "type": "string"
                 },
-                "parent_id": {
+                "parameters": {
+                    "description": "开发中",
+                    "type": "array",
+                    "items": {}
+                },
+                "parentId": {
                     "description": "父菜单id",
                     "type": "integer"
                 },
@@ -810,6 +889,7 @@
                     "type": "string"
                 },
                 "children": {
+                    "description": "子角色",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Role"
@@ -818,6 +898,12 @@
                 "defaultRouter": {
                     "description": "默认菜单(默认dashboard)",
                     "type": "string"
+                },
+                "menus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Menu"
+                    }
                 },
                 "parentId": {
                     "description": "父角色ID",
@@ -898,6 +984,15 @@
             ],
             "properties": {
                 "authorityId": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.GetAuthorityId": {
+            "type": "object",
+            "properties": {
+                "authorityId": {
+                    "description": "角色ID",
                     "type": "string"
                 }
             }
@@ -1056,7 +1151,7 @@
         "response.MenuTree": {
             "type": "object",
             "properties": {
-                "menuList": {
+                "menus": {
                     "description": "菜单树",
                     "type": "array",
                     "items": {
